k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fruits-api
  labels:
    app: fruits-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fruits-api
  template:
    metadata:
      labels:
        app: fruits-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: fruits-api
          image: ghcr.io/sudosz/fruits-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 200m
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
